# mydocs-pub

./: .gitignore  Makefile  Makefile.html  Publish.pm  Publish.pm.html  README.md  README.md.html  cdwriting.txt  getdoc.xp?AN=655843620  gh-publish  gh-publish.html  gnus.txt  grepre-examples.txt  grepre-examples.txt.html  index.html  mbrsaverestore.txt  mbrsaverestore.txt.html  physics.rb  physics.rb.html  printing-hierarchical-websites.txt  printing-hierarchical-websites.txt.html  procsandthreads.txt  resolvconf.txt  resolvconf.txt.html  sane.txt  scsi-subsystem.txt  split-create-filelists.sh  split-create-filelists.sh.html  wgetbug.txt  wgetbug.txt.html  wwwpublish  wwwpublish-printfiles.pl  wwwpublish-printfiles.pl.html  wwwpublish.html
ajax/: index.html  synchronous-ajax.txt  synchronous-ajax.txt.html
amqp/: Makefile  Makefile.html  index.html  misc.md  misc.md.html
ansible/: Makefile.html  index.html  misc.md  misc.md.html
apt/: apt-build.txt  apt-build.txt.html  index.html
apue/: index.html
aspectj/: index.html
avreceivers/: index.html  misc.txt  misc.txt.html
backups/: index.html  rsync-vs-rdiff-backup.txt  rsync-vs-rdiff-backup.txt.html
bluetooth/: bluetooth.txt  bluetooth.txt.html  index.html  rfcomm.txt  rfcomm.txt.html
compware/: interaction.backup.fm
debian/: alternatives.txt  alternatives.txt.html  index.html  install-kernel.txt  install-kernel.txt.html  reporting-bugs.txt  (+3 more)
math/leapseconds/: export_figures.py  justfile  leapseconds.ipynb  pyproject.toml
math/leapseconds/recorded/: __init__.py  eopc04_IAU2000.62-now  lod_deltas.py
(+1079 files in other folders)
