[project]
name = "leapseconds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.1.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "ruff>=0.12.2",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "jupyterlab>=4.5.7",
]
